@startuml

title __MEMBERS's Class Diagram__\n

  namespace  {
    namespace embers {
      class Members.DiscountCode {
          + DiscountCode()
          + getMemberDescription()
          + getMemberDiscountRate()
      }
    }
  }
  

  namespace  {
    namespace embers {
      class Members.DriverTest {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace embers {
      class Members.basicMemberDiscount {
          + basicMemberDiscount()
          + getMemberDiscountRate()
      }
    }
  }
  

  namespace  {
    namespace embers {
      class Members.guest {
          + getMemberDiscountRate()
          + guest()
      }
    }
  }
  

  namespace  {
    namespace embers {
      class Members.longTermMember {
          + getMemberDiscountRate()
          + longTermMember()
      }
    }
  }
  

  namespace  {
    namespace embers {
      abstract class Members.member {
          ~ discountedPrice : int
          ~ memberDescription : String
          + getMemberDescription()
          {abstract} + getMemberDiscountRate()
      }
    }
  }
  

  namespace  {
    namespace embers {
      abstract class Members.memberDecorator {
          {abstract} + getMemberDescription()
      }
    }
  }
  

  namespace  {
    namespace embers {
      class Members.overSixtyMember {
          + getMemberDiscountRate()
          + overSixtyMember()
      }
    }
  }
  

  namespace  {
    namespace embers {
      class Members.studentMember {
          + getMemberDiscountRate()
          + studentMember()
      }
    }
  }
  

  Members.DiscountCode -up-|> Members.memberDecorator
  Members.basicMemberDiscount -up-|> Members.member
  Members.guest -up-|> Members.member
  Members.longTermMember -up-|> Members.member
  Members.memberDecorator -up-|> Members.member
  Members.memberDecorator o-- Members.member : member
  Members.overSixtyMember -up-|> Members.member
  Members.studentMember -up-|> Members.member


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
